[gd_scene load_steps=2 format=3 uid="uid://xxtbdk1aq518"]

[ext_resource type="Script" uid="uid://bq5lxoclyd2ll" path="res://components/draggable_editable_player_panel.gd" id="1_ow7lj"]

[node name="PlayerPanelContainer" type="PanelContainer"]
custom_minimum_size = Vector2(350, 40)
offset_right = 200.0
offset_bottom = 40.0
size_flags_horizontal = 3
script = ExtResource("1_ow7lj")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PlayerName" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Player Name Here"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="GridContainer" type="GridContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 0
columns = 2

[node name="Attr1Label" type="Label" parent="HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "0"
horizontal_alignment = 1

[node name="Attr2Label" type="Label" parent="HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 1

[node name="Attr3Label" type="Label" parent="HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 1

[node name="Attr4Label" type="Label" parent="HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 1

[node name="EditPlayerButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Edit"

[node name="DeletePlayerButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Delete"
